--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-gray">
+            <div class="bg-gray courses-master-classes">
             <div class="container">
                <app-course-slider/>
             </div>
