--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -357,7 +357,10 @@
                     </div>
                 </div>
                 <div class="right-content" data-aos="fade-up" data-aos-duration="200">
-                    <h5 class="tag-line">Social cause involvement</h5>
+                    <!-- <h5 class="tag-line">Social cause involvement</h5> -->
+                     <div class="sandstone-logo-blk">
+                        <img src="images/sandstone-logo-blk.webp" loading="lazy" alt="">
+                    </div>
                     <h3>Sandstone Care</h3>
                     <p>Kenny Weiss was honored and humbled when Deb from Sandstone Care‘s alcohol and drug treatment
                         facility reached out to ask him to supply a quote for their website and blog.<br></p>
@@ -371,9 +374,7 @@
                         is familiar with Sandstone’s programs as someone very close to him has been treated at that
                         facility. He has met many of the counselors and highly recommends them if you or a loved one
                         is struggling with an addiction. Watch Kenny’s video to hear the story.</p>
-                    <div class="sandstone-logo-blk">
-                        <img src="images/sandstone-logo-blk.webp" loading="lazy" alt="">
-                    </div>
+                   
                     <a routerLink="/book-session" class="button mt-3">Book a session with Kenny</a>
 
 
@@ -385,7 +386,7 @@
     </section>
 
 
-    <section class="who-we-are">
+    <section class="who-we-are bgg">
         <div class="container ">
             <div class="flex-who-we-are sticky">
 
@@ -424,78 +425,7 @@
         </div>
 
     </section>
-
-
-    <!-- <div class="card-section sticky">
-        <div class="container">
-            <div class="card-row aos-init aos-animate" data-aos="fade-up" data-aos-duration="400">
-                <div class="dddd">
-                    <div class="card-content-grey-bg">
-                        <h3>Sandstone Care</h3>
-                        <p>Kenny Weiss was honored and humbled when Deb from Sandstone Care‘s alcohol and drug treatment
-                            facility reached out to ask him to supply a quote for their website and blog.<br></p>
-
-                        <p>They were familiar with Kenny’s work on narcissism and had been following his content on the
-                            subject, and as they were building out their own blog on the subject, they asked Kenny to
-                            comment as a subject matter expert.</p>
-                        <br>
-                        <p>You see, Kenny is a person who has struggled with multiple addictions and has been married to
-                            narcissists. Not only has he studied the subject, but he has also lived it. In addition, he
-                            is familiar with Sandstone’s programs as someone very close to him has been treated at that
-                            facility. He has met many of the counselors and highly recommends them if you or a loved one
-                            is struggling with an addiction. Watch Kenny’s video to hear the story.</p>
-                        <div class="sandstone-logo-blk">
-                            <img src="images/sandstone-logo-blk.webp" loading="lazy" alt="">
-                        </div>
-                        <div class="card-image-grey-bg">
-                            <iframe title="YouTube video player" src="https://www.youtube.com/embed/V43JvmYUIlg"
-                                width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
-                        </div>
-                    </div>
-
-                    <!-----------second section------------>
-    <!-- <div class="secondsection">
-                        <h3>The Science Behind the Healing: Neurofeedback & Neuroscience</h3>
-                        <p>Kenny didn’t stop at psychology and coaching. He went deeper — into the brain itself.</p>
-                        <br>
-
-                        <p>Through neurofeedback therapy, he discovered how trauma physically rewires the brain,
-                            trapping people in cycles of stress, anxiety, and emotional reactivity.</p><br>
-
-
-                        <p>Today, Kenny integrates <b>neuroscience-backed tools</b> and <b>neurofeedback
-                                techniques</b> into his coaching — helping clients regulate their nervous systems
-                            and create change not just emotionally, but neurologically.</p><br>
-
-                        <p>It’s where <b>inner work meets brain science —</b> and the results are
-                            life-changing.</p><br>
-
-                        <div class="card-image-grey-bg">
-                            <iframe title="YouTube video player" src="https://www.youtube.com/embed/m5XAN2nFBT0"
-                                width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
-                        </div>
-                        <a routerLink="/book-session" class="button ">Talk to Kenny</a>
-
-                    </div>
-
-
-
-                </div>
-
-                <div class="card-image-grey-bg stickysectio">
-                    <h3>Partnering with Sandstone Care: Reaching More Who Need It</h3>
-                    <p>Recognizing the power of Emotional Authenticity, Sandstone Care, a nationally recognized
-                        addiction recovery center, partnered with Kenny to integrate his teachings into their
-                        programs.</p>
-
-                        
-                </div>
-            </div>
  
-        </div>
-    </div> -->
-
-
 
     <section class="courses-master-classes">
         <div class="course-heading" data-aos="fade-up" data-aos-duration="500">
@@ -662,7 +592,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial-card" id="testimonial-card">
                                 <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
-                                <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
+                                <img src="images/16.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                 <div class="testimonial-content">
                                     <h3>Monday</h3>
                                     <img src="images/star.svg" class="stars" loading="lazy" alt="" />
