--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1278,7 +1278,7 @@ ul.doterd li {
 .vertyvery-contents ul li::after {
     position: absolute;
     content: "";
-    background-color: #BBA056;
+    background-color: #512570;
     height: 10px;
     width: 10px;
     left: -20px;
@@ -5794,11 +5794,7 @@ section.sourses-section .right-content h3 {
     padding: 1px;
     font-size: 0.8em;
 }
-
-.feature-text h4 {
-    font-weight: 600;
-    margin-bottom: 4px;
-}
+ 
 
 .discover-btn {
     background-color: #ff6243;
@@ -5816,9 +5812,9 @@ section.sourses-section .right-content h3 {
 }
 
 .sandstone-logo-blk {
-    margin-top: 20px;
-    width: 220px;
+    width: 150px;
 }
+
 
 
 /************hero section amt****************/
@@ -7017,7 +7013,9 @@ a.button.border-only {
         padding-left: 0px;
         margin-bottom: 25px;
     }
-
+.about-right-img .imagedesign { 
+    border-radius: 15px 15px 15px 70px;
+}
     .works-sections .right {
         padding-left: 0px;
     }
@@ -7868,9 +7866,7 @@ a.button.border-only {
         position: static;
     }
 
-    .flex-podcastbut {
-        display: grid;
-    }
+ 
 
     .industry-card p {
         margin-left: 0;
@@ -8030,6 +8026,16 @@ a.button.border-only {
         font-size: 1.4em;
     }
 
+.flex-inwrapper .content {
+    order: 2;
+}
+.flex-inwrapper .images {
+    order: 1;
+}
+    .flex-inwrapper .images .img2 {
+        width: 135px;
+    }
+
     h5 {
         font-size: 1.7em;
     }
@@ -8042,11 +8048,7 @@ a.button.border-only {
         padding: 25px;
         gap: 20px;
     }
-
-    .feature-text h4 {
-        font-size: 1.4em;
-    }
-
+ 
     .flex-inwrapper .button-row {
         order: 4;
     }
@@ -8125,10 +8127,7 @@ a.button.border-only {
     .flex-inwrapper .button {
         order: 6;
     }
-
-    a.culction {
-        font-size: 1.2em;
-    }
+ 
 
     .booklistcontent h5 {
         font-size: 1.7;
@@ -8146,21 +8145,23 @@ a.button.border-only {
         order: inherit;
     }
 
+.card-content-grey-bg  {
+        padding: 20px 20px 20px 20px;
+        order: 2;
+    }
 }
 
 @media (max-width: 500px) {
 
     .rightdesigncontent {
         bottom: 0;
+        right: 0;
     }
 
     .rightdesigncontent h5 {
         font-size: 1em;
     }
 
-    .card-content-grey-bg {
-        padding: 20px 20px 20px 20px;
-    }
 
     .bookcardbody .author {
         flex-wrap: wrap;
@@ -8256,7 +8257,11 @@ a.button.border-only {
     }
 
     section.who-we-are {
-        padding: 30px 0px;
+        padding: 30px 0px; 
+    }
+
+    section.who-we-are.bgg {
+        border-top: 2px solid #3333;
     }
 
     .right-content .button-row {
