--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7353,6 +7353,19 @@ a.button.border-only {
         justify-content: center;
     }
 
+    .flex-who-we-are.mb-3{
+        padding: 45px 0px;
+        margin-bottom: 0;
+    }
+    .odd-class .flex-who-we-are {
+    border-bottom: 1px solid #ccc;
+}
+.even-class .flex-who-we-are {
+    border-bottom: 1px solid #ccc;
+}
+.courseslistitemsdd .even-class:last-child .flex-who-we-are{
+    border: none;
+}
     .lastcontnt {
         text-align: center;
     }
@@ -7453,6 +7466,7 @@ a.button.border-only {
 
     .flex-who-we-are {
         gap: 50px;
+        position: relative;
     }
 
 
@@ -7880,6 +7894,8 @@ a.button.border-only {
     .flex-podcastbut {
         display: grid;
     }
+ 
+ 
 
     .industry-card p {
         margin-left: 0;
@@ -8053,9 +8069,7 @@ a.button.border-only {
         gap: 20px;
     }
 
-    .feature-text h4 {
-        font-size: 1.4em;
-    }
+  
 
     .flex-inwrapper .button-row {
         order: 4;
@@ -8210,6 +8224,7 @@ a.button.border-only {
 .img-contant {
     position: relative; 
     padding: 20px 10px; 
+    background-color: #020a65;
 }
     .kanneylessloren ul li::after,
     ul.doterd li::after {
