--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -88,7 +88,7 @@
                         brings you
                         expert advice and heartfelt stories to support your growth.</p>
 
-                    <div class="button-row">
+                    <div class="button-row left">
                         <a class="button" target="_blank"
                             href="https://www.youtube.com/playlist?list=PLOKbwXgOsMo94Ign8iLvv4mEhnGn1lu09">YouTube</a>
                         <a class="button" target="_blank" href="https://geni.us/KWDywbp">Spotify</a>
